--- a/package.json
+++ b/package.json
@@ -11,24 +11,57 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
+    "@react-navigation/stack": "^7.1.2",
+    "@shopify/react-native-skia": "1.5.0",
+    "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-query": "^5.67.2",
+    "@types/lodash": "^4.17.16",
+    "axios": "^1.8.2",
+    "babel-preset-expo": "^12.0.9",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.37",
+    "expo-font": "^13.0.4",
+    "expo-image": "^2.0.6",
+    "expo-image-picker": "^16.0.6",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
     "nativewind": "latest",
+    "numeral": "^2.0.6",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-webview": "13.12.5",
+    "styled-components": "^6.1.16",
+    "victory-native": "^41.16.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/numeral": "^2.0.5",
     "@types/react": "~18.3.12",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
